# web_template

./: pyproject.toml
web_template/: main.py
