[tool.poetry]
name = "web-template"
version = "0.1.0"
description = ""
authors = ["NVlBelova <n.vl.belova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
